test/compile_errors/stage1/obj/main_function_with_bogus_args_type.zig
pub fn main(args: [][]bogus) !void {_ = args;}

// main function with bogus args type
//
// tmp.zig:1:23: error: use of undeclared identifier 'bogus'
